--- a/CódigoFuente/BitacorasProduccion/Views/BG_CentroCosto/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BG_CentroCosto/Index.cshtml
@@ -53,13 +53,14 @@
                     <div class="x_content">
                         <div class="row">
                             <div class="col-sm-12">
+                                <div class="form-group">
+                                    <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
+                                        <i class="fa fa-plus-square"></i>
+                                        Crear nuevo
+                                    </a>
+                                </div>
                                 <div class="card-box table-responsive">
-                                    <div class="form-group">
-                                        <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>
-                                    </div>
+
                                     <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
@@ -70,21 +71,25 @@
                                                     @Html.DisplayNameFor(model => model.num_centro_costo)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.descripcion)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.id_budget_departamento)
+                                                </th>
+                                                <th>
                                                     Plant
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.id_area)
+                                                    Responsable
                                                 </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.id_responsable)
-                                                </th>
-                                                
+
                                                 <th></th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
+                                                String responsables = (string.Join("/", item.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
                                                 <tr>
                                                     <td>
                                                         @fila
@@ -93,15 +98,18 @@
                                                         @Html.DisplayFor(modelItem => item.num_centro_costo)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
+                                                        @Html.DisplayFor(modelItem => item.descripcion)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                        @Html.DisplayFor(modelItem => item.budget_departamentos.descripcion)
                                                     </td>
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
+                                                        @Html.DisplayFor(modelItem => item.budget_departamentos.budget_plantas.descripcion)
                                                     </td>
-                                                   
+                                                    <td>
+                                                        <span>@responsables</span>
+                                                    </td>
+
                                                     <td>
                                                         <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " title="Editar">
                                                             <i class="fa fa-pencil-square-o"></i>
@@ -131,6 +139,24 @@
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
 
     @Scripts.Render("~/bundles/dataTables_js")
+
+    <script>
+
+        $(document).ready(function () {
+
+           
+
+        });
+
+      
+
+        //agranda el tamaño de la barra
+        window.onload = function () {
+            clicMenu(1);
+        }
+
+
+    </script>
 
 }
 
