--- a/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/DetailsCentro.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/DetailsCentro.cshtml
@@ -86,9 +86,9 @@
                                 <div class="card-box">
                                     <div class="form-group">
                                         @*<a href="@Url.Action("Create", ViewBag.ControllerName)" class="btn btn-success">
-                                                <i class="fa fa-plus-square"></i>
-                                                Crear nuevo
-                                            </a>*@
+                <i class="fa fa-plus-square"></i>
+                Crear nuevo
+            </a>*@
                                     </div>
 
                                     <div class="form-group row">
@@ -106,6 +106,13 @@
                                         <label class="control-label col-md-1 text_derecha">Cost Center</label>
                                         <div class="col-md-2">
                                             <input type="text" class="form-control" value="@centro_costo.num_centro_costo" readonly>
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <!--Description Name-->
+                                        <label class="control-label col-md-1 text_derecha">Name</label>
+                                        <div class="col-md-8">
+                                            <input type="text" class="form-control" value="@Model.descripcion" readonly>
                                         </div>
                                     </div>
                                     @{
@@ -198,8 +205,8 @@
                                                                         Totals
                                                                     </th>
                                                                     <th>
-                                                                            Comentarios
-                                                                        </th>
+                                                                        Comentarios
+                                                                    </th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
@@ -282,8 +289,8 @@
                                                                             $ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalMeses().Value)
                                                                         </td>
                                                                         <td>
-                                                                                @item.Comentario
-                                                                            </td>
+                                                                            @item.Comentario
+                                                                        </td>
                                                                     </tr>
 
                                                                     fila++;
@@ -589,8 +596,8 @@
                                                                         Totals
                                                                     </th>
                                                                     <th>
-                                                                            Comentarios
-                                                                        </th>
+                                                                        Comentarios
+                                                                    </th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
@@ -673,8 +680,8 @@
                                                                             $ @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalMeses().Value)
                                                                         </td>
                                                                         <td>
-                                                                                @item.Comentario
-                                                                            </td>
+                                                                            @item.Comentario
+                                                                        </td>
                                                                     </tr>
 
                                                                     fila++;
