--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresente.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresente.cshtml
@@ -124,6 +124,13 @@
                                             <input type="text" class="form-control" value="@Model.num_centro_costo" readonly>
                                         </div>
                                     </div>
+                                    <div class="form-group row">
+                                        <!--Description Name-->
+                                        <label class="control-label col-md-1 text_derecha">Name</label>
+                                        <div class="col-md-8">
+                                            <input type="text" class="form-control" value="@Model.descripcion" readonly>
+                                        </div>
+                                    </div>
                                     @{
                                         String responsables = (string.Join("/", Model.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
                                     }
